Make sure input never gets too narrow

--- a/css/main.css
+++ b/css/main.css
@@ -364,6 +364,7 @@ input.form-control {
 
 #editingCalendarName {
   width: 100%;
+  min-width: 300px;
 }
 
 /* Helpers */
